# papercode_analyzer

./: .gitignore  Agents.py  LICENSE  README.md  app.py  docker-compose.yml  dockerfile  interface.py  pyproject.toml  requirements.txt
app/: Agents.py  app.py
src/papercode_analyzer/: .gitignore  LICENSE  README.md  crew.py  main.py
src/papercode_analyzer/config/: agents.yaml  tasks.yaml
src/papercode_analyzer/tools/: tools.py
