[project]
name = "papercode_analyzer"
version = "0.1.0"
description = "papercode-analyzer using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.2,<1.0.0"
]

[project.scripts]
papercode_analyzer = "papercode_analyzer.main:run"
run_crew = "papercode_analyzer.main:run"
train = "papercode_analyzer.main:train"
replay = "papercode_analyzer.main:replay"
test = "papercode_analyzer.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
